--- a/resources/registration/view/registration-general.html
+++ b/resources/registration/view/registration-general.html
@@ -1,5 +1,5 @@
 <nav class="navbar pt-1 pb-1">
-    <span class="navbar-brand p-0 m-0" ui-sref="claim-registration">Claims Registration</span>
+    <span class="navbar-brand p-0 m-0" ui-sref="claim-registration"><i class="fa fa-arrow-left" style="cursor:pointer"></i>&nbsp;&nbsp;Claim Registration</span>
     <span class="navbar-brand p-0 m-0" ng-click="toggleUpload();"><i class="fa fa-plus-square-o" style="font-size: larger"></i></span>
 </nav>
 <section class="">
