--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -485,7 +485,7 @@
                                     <span class="oi" data-glyph="thumb-down"></span>
                                 </button>                            
                             </div>
-                            <h3 class="innerHeadText mt-2 mb-2 d-inline-block">Registered Request</h3><div class="currencyType d-inline-block">Currency: AED</div>
+                            <h3 class="innerHeadText mt-2 mb-2 d-inline-block">Claim Treatment / Service Level</h3><div class="currencyType d-inline-block">Currency: AED</div>
                             <a href="javascript:;" class="tablColmArrow float-right mt-2 mb-2 mr-3 ml-2" ng-click="createNewClaim();">
                                 <span class="oi" data-glyph="plus"></span>
                             </a>
