--- a/resources/eclaim/view/eclaim.html
+++ b/resources/eclaim/view/eclaim.html
@@ -341,7 +341,7 @@
                                 <span class="oi" data-glyph="thumb-down"></span>
                             </button>                            
                         </div>
-                        <h3 class="innerHeadText mt-2 mb-2 d-inline-block">Registered Request</h3><div class="currencyType d-inline-block">Currency: AED</div>
+                        <h3 class="innerHeadText mt-2 mb-2 d-inline-block">Claim Treatment / Service Level</h3><div class="currencyType d-inline-block">Currency: AED</div>
                         <a href="javascript:;" class="tablColmArrow float-right mt-2 mb-2 mr-3 ml-2" ng-click="addRow();">
                             <span class="oi" data-glyph="plus"></span>
                         </a>
