--- a/resources/registration/view/registration.html
+++ b/resources/registration/view/registration.html
@@ -8,7 +8,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-7 p-0">
-                        <div class="reimbListTabl">
+                        <div class="searchBarRow reimbListTabl" style="display: block">
                             <div layout-gt-sm="row">
                                 <div style="border-left: 1px solid #e6e6e6;width: 100% !important;">
                                     <md-input-container flex-gt-sm>
@@ -16,23 +16,46 @@
                                         <input ng-model="ibanNum">
                                     </md-input-container>
                                 </div>
-                                <div style="border-left: 1px solid #e6e6e6;width: 100% !important;">
-                                    <md-input-container flex-gt-sm>
-                                        <label>Member Card Number</label>
-                                        <input ng-model="memberNumber">
-                                    </md-input-container>
+                                <div style="border-left: 1px solid #e6e6e6;width: 100% !important;"> 
+                                    <md-autocomplete
+                                        md-input-name = "Member Number"
+                                        md-selected-item="searchMemNum"
+                                        md-search-text="memNosearchText"
+                                        md-items="item in querySearch(memNosearchText)"
+                                        md-item-text="item.memberNumber"                                    
+                                        md-floating-label="Member Card Number"
+                                        md-clear-button="true">
+                                        <md-item-template>
+                                            <span md-highlight-text="memNosearchText">{{item.memberNumber}}</span>
+                                        </md-item-template>
+                                        <md-not-found>
+                                                No Result Found                                
+                                        </md-not-found>
+                                    </md-autocomplete>
                                 </div>
                                 <div style="border-left: 1px solid #e6e6e6;width: 100% !important;">
                                     <md-input-container flex-gt-sm>
-                                        <label>Reference Number</label>
-                                        <input ng-model="referenceNumber">
+                                        <label>Voucher Number</label>
+                                        <input ng-model="voucherNumber">
                                     </md-input-container>
                                 </div>
                                 <div style="border-left: 1px solid #e6e6e6;width: 100% !important;">
-                                    <md-input-container flex-gt-sm>
-                                        <label> PolicyNumber</label>
-                                        <input ng-model="policyNumber">
-                                    </md-input-container>
+                                   
+                                    <md-autocomplete
+                                        md-selected-item="searchPolicy"
+                                        md-search-text="searchText"
+                                        md-items="item in querySearch(searchText)"
+                                        md-item-text="item.policyNumber"       
+                                        md-floating-label="Policy Number"
+                                        md-clear-button="true">
+                                        <md-item-template>
+                                            <span md-highlight-text="searchText">{{item.policyNumber}}</span>
+                                        </md-item-template>
+                                        <md-not-found>
+                                                No Result Found                                
+                                        </md-not-found>
+                                    </md-autocomplete>
+                                    
                                 </div>
                                 <div class="searchColm align-middle text-center" ng-click="searchBtn()" style="width: 50% !important ;padding-top:10px;">
                                     <a href="javascript:;" class="searBtn mt-1 ml-1 align-middle"><span class="oi align-middle" data-glyph="magnifying-glass"></span></a>
@@ -56,17 +79,17 @@
                             <table class="table">
                                 <thead>
                                     <tr>
-                                        <th ng-click="sortBy('memberNumber')">Member Number
+                                        <th ng-click="sortBy('memberNumber')">Member Card Number
                                             <span class="fa" ng-show="propertyName == 'memberNumber'"ng-class="{'fa-hand-o-down': reverse, 'fa-hand-o-up' : !reverse}"></span>
                                         </th>
-                                        <th ng-click="sortBy('memberName')">Member Card Name
+                                        <th ng-click="sortBy('memberName')">Member Name
                                             <span class="fa" ng-show="propertyName == 'memberName'"ng-class="{'fa-hand-o-down': reverse, 'fa-hand-o-up' : !reverse}"></span>
                                         </th>
                                         <th ng-click="sortBy('policyNumber')">Policy Number
                                             <span class="fa" ng-show="propertyName == 'policyNumber'"ng-class="{'fa-hand-o-down': reverse, 'fa-hand-o-up' : !reverse}"></span>
                                         </th>
                                         <th ng-click="sortBy('voucherNumber')">Voucher Number
-                                            <span class="fa" ng-show="propertyName == 'paymentWay'"ng-class="{'fa-hand-o-down': reverse, 'fa-hand-o-up' : !reverse}"></span>
+                                            <span class="fa" ng-show="propertyName == 'voucherNumber'"ng-class="{'fa-hand-o-down': reverse, 'fa-hand-o-up' : !reverse}"></span>
                                         </th>
                                         <th ng-click="sortBy('ibanNum')">IBAN Number
                                             <span class="fa" ng-show="propertyName == 'ibanNum'"ng-class="{'fa-hand-o-down': reverse, 'fa-hand-o-up' : !reverse}"></span>
@@ -81,8 +104,8 @@
                                         <td>{{claim.policyNumber}}</td>
                                         <td>{{claim.voucherNumber}}</td>
                                         <td>{{claim.ibanNum}}</td>
-                                        <td class="text-center">
-                                            <a class="oi" data-glyph="paperclip" href="resources/img/dis.png" download></a>
+                                        <td class="text-center" >
+                                            <a style="float:left"class="oi" data-glyph="paperclip" href="resources/img/dis.png" download></a>
                                         </td>
                                     </tr>
                                 </tbody> 
