--- a/resources/registration/view/registration.html
+++ b/resources/registration/view/registration.html
@@ -10,6 +10,12 @@
                     <div class="col-7 p-0">
                         <div class="searchBarRow reimbListTabl" style="display: block">
                             <div layout-gt-sm="row">
+                                    <div style="border-left: 1px solid #e6e6e6;width: 100% !important;">
+                                            <md-input-container flex-gt-sm>
+                                                <label>Member Name</label>
+                                                <input ng-model="memberName">
+                                            </md-input-container>
+                                        </div>
                                 <div style="border-left: 1px solid #e6e6e6;width: 100% !important;">
                                     <md-input-container flex-gt-sm>
                                         <label>IBAN Number</label>
@@ -17,7 +23,7 @@
                                     </md-input-container>
                                 </div>
                                 <div style="border-left: 1px solid #e6e6e6;width: 100% !important;"> 
-                                    <md-autocomplete
+                                    <md-autocomplete flex-gt-sm   
                                         md-input-name = "Member Number"
                                         md-selected-item="searchMemNum"
                                         md-search-text="memNosearchText"
@@ -33,7 +39,7 @@
                                         </md-not-found>
                                     </md-autocomplete>
                                 </div>
-                                <div style="border-left: 1px solid #e6e6e6;width: 100% !important;">
+                                <div style="border-left: 1px solid #e6e6e6;width: 130% !important;">
                                     <md-input-container flex-gt-sm>
                                         <label>Voucher Number</label>
                                         <input ng-model="voucherNumber">
@@ -41,7 +47,7 @@
                                 </div>
                                 <div style="border-left: 1px solid #e6e6e6;width: 100% !important;">
                                    
-                                    <md-autocomplete
+                                    <md-autocomplete flex-gt-sm
                                         md-selected-item="searchPolicy"
                                         md-search-text="searchText"
                                         md-items="item in querySearch(searchText)"
