--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -98,7 +98,7 @@
                                     <uib-accordion-heading>
                                         <div class="p-1">
                                             <h5 class="mb-0">
-                                                <button class="btn accordionBtn">Policy Details
+                                                <button class="btn accordionBtn">Claim Details
                                                     <span class="oi expanded" data-glyph="minus"></span>
                                                     <span class="oi collapsed" data-glyph="plus"></span>
                                                 </button>
@@ -109,9 +109,33 @@
                                         <div class="fldsWrap clearfix">
                                             <md-input-container flex-gt-sm>    
                                                 <label>Event Country</label>
-                                                <input type="text" ng-model="policyDetails.country" ng-value="'Dubai'">
+                                                <input type="text" ng-model="claimDetails.country" ng-value="'Dubai'">
                                             </md-input-container>
                                         </div>
+                                    </div>
+                                    <!-- <a href="javascript:;" class="btn-link moreBtn" ng-show="!showPolicyMore" ng-click="showPolicyMore=!showPolicyMore">More...</a>
+                                    <a href="javascript:;" class="btn-link moreBtn" ng-show="showPolicyMore" ng-click="showPolicyMore=!showPolicyMore">Few...</a> -->
+                                </div>
+                            </div>
+                            <div uib-accordion-group class="panel-default">
+                                <div>
+                                    <uib-accordion-heading>
+                                        <div class="p-1">
+                                            <h5 class="mb-0">
+                                                <button class="btn accordionBtn">Policy Details
+                                                    <span class="oi expanded" data-glyph="minus"></span>
+                                                    <span class="oi collapsed" data-glyph="plus"></span>
+                                                </button>
+                                            </h5>
+                                        </div>
+                                    </uib-accordion-heading>
+                                    <div class="accordion-input">
+                                        <!-- <div class="fldsWrap clearfix">
+                                            <md-input-container flex-gt-sm>    
+                                                <label>Event Country</label>
+                                                <input type="text" ng-model="policyDetails.country" ng-value="'Dubai'">
+                                            </md-input-container>
+                                        </div> -->
                                         <div class="fldsWrap clearfix">
                                             <md-input-container flex-gt-sm>    
                                                 <label>Claim Condition</label>
